# dazee-small

./: .copilot-ignore  .dockerignore  .env  .env.development  .env.production  .env.staging  .envrc  .gitignore  .gitlab-ci.yml  .production-state  .staging-state  AI技术团队招聘规划_完整版.md  ANTIGRAVITY_COMPARISON_REPORT.md  CHANGELOG_V9.0.md  CODE_ANALYSIS_REPORT.md  CODE_STATISTICS.md  CONTEXT_COMPACTION_SUMMARY.md  CONTEXT_PROGRESS_BAR_UPDATE.md  DEPLOYMENT_COMPLETE.md  Dockerfile  Dockerfile.production  E2E_ARCHITECTURE_VERIFY_REPORT.md  E2E_OPTIMIZATION_VERIFICATION.md  E2E_VALIDATION_REPORT.md  EVALUATION_GUIDE.md  GIT_PUSH_SUMMARY.md  LICENSE  LLM_CONFIG_MIGRATION.md  MEM0_E2E_TEST_SUMMARY.md  MEM0_PERSONALIZATION_VALIDATION_REPORT.md  MULTI_AGENT_ROADMAP.md  PROJECT_ISSUES_ANALYSIS.md  PROMPT_LAYERING_VALIDATION_REPORT.md  QUICK_START.md  README.md  README_zh.md  REFACTOR_COMPLETE.md  TEST_EXECUTION_GUIDE.md  TODO.md  V7.6_OPTIMIZATION_SUMMARY.md  (+39 more)
.computenest/: .computenest_parameters.yaml
channels/: __init__.py  config.py  manager.py  registry.py
config/: capabilities.yaml  channels.yaml  context.yaml  context_compaction.yaml  e2b_templates.yaml  gateway.example.yaml  gateway.yaml  multi_agent_config.yaml  prompt_config.yaml  resilience.yaml  routing_rules.yaml  scheduled_tasks.yaml  semantic_search.yaml  (+3 more)
frontend/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
frontend/src-tauri/binaries/: zenflux-backend-aarch64-apple-darwin
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
(+2139 files in other folders)
