[package]
name = "zenflux-agent"
version = "0.7.5"
description = "ZenFlux Agent - AI-powered local execution client"
authors = ["ZenFlux Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
hostname = "0.4"
ureq = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
